# crud_fastapi

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  main.py  models.py  router.py  schemas.py
frontend/: app.py
frontend/.streamlit/: config.toml
