[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Victor Barros <victorbarros51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
pydantic = "^2.10.6"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
psycopg2 = "^2.9.10"
streamlit = "^1.41.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
